# blueutil-tui

./: .coverage  README.md  pyproject.toml
src/blueutil_tui/: __init__.py  app.py  constants.py  utils.py  widgets.py
tests/app_tests/: test_app.py
